--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -10,8 +10,9 @@
   "dependencies": {
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
-    "@material-ui/core": "^5.0.0-beta.5",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "autoprefixer": "^10.4.7",
     "axios": "^0.27.2",
     "postcss": "^8.4.14",
