--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@deepdub/react-ok-tooltip": "^0.1.4",
     "@headlessui/react": "^1.6.4",
     "@heroicons/react": "^1.0.6",
+    "@material-tailwind/react": "^1.0.4",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.61",
