--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.31.3",
     "react-hooks-use-modal": "^2.1.0",
     "react-router-dom": "^6.3.0",
+    "react-select": "^5.3.2",
     "tailwindcss": "^3.1.0",
     "unop-react-dropdown": "^0.2.3"
   },
